feat(css): add brackets around links because it looks cool...;

--- a/pages/404.md
+++ b/pages/404.md
@@ -4,6 +4,4 @@ The neural pathway you're following for seems to have wandered into the void...
 
 <br/>
 
-> If you believe this is unexpected, please contact the system administrator \[[me](/about)\].
-
-
+> If you believe this is unexpected, please contact the system administrator [me](/about).
