--- a/pages/404.md
+++ b/pages/404.md
@@ -1,3 +1,8 @@
+<head>
+  <title>Page Not Found | Auxv.org</title>
+  <meta name="author" content="Owen Friedman">
+</head>
+
 # 404: Page Not Found 🗃️
 
 The neural pathway you're following for seems to have wandered into the void...
